# uamsho

./: .coveragerc  .flake8  .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_book.py  0002_book_title.py  0003_init_model_structure.py  0004_add_owner.py  0005_date_edition.py  0006_categoryutils_imageutils.py  0007_auto_20210523_1950.py  0008_auto_20210523_2024.py  0009_auto_20210523_2034.py  0010_auto_20210523_2035.py  0011_auto_20210524_1528.py  0012_auto_20210524_2312.py  0013_auto_20210529_2037.py  0014_book_ontop.py  0015_book_add_date.py  0016_auto_20210609_2144.py  0017_article_date_creation.py  0018_auto_20210610_0632.py  0019_article_ontop.py  0020_utilisateur.py  0021_auto_20210729_2121.py  0022_book_price.py  0023_book_date_creation.py  0024_article_likes.py  0025_article_author.py  0026_auto_20210822_1533.py  0027_auto_20210903_1450.py  0028_book_quantity.py  0029_auto_20210922_1414.py  0030_auto_20210922_1438.py  0031_discussion_date_creation.py  0032_auto_20210927_2236.py  0033_auto_20210927_2242.py  0034_auto_20210927_2245.py  0035_auto_20210927_2256.py  0036_comment_date_creation.py  0037_remove_likes_number_likes.py  0038_auto_20211005_1607.py  0039_auto_20211015_1359.py  0040_auto_20211015_1413.py  (+5 more)
core/model/: utils.py  (+1 more)
frontend/: .eslintcache  .gitignore  developpement.md  package-lock.json  package.json  tsconfig.json
njietcheu_livre/: settings.py  urls.py  wsgi.py
njietcheu_livre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+114 files in other folders)
