[tool.poetry]
name = "njietcheu_livre"
version = "0.1.0"
description = "'books and articles for Njietcheu'"
authors = ["ptchepga"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.5"
djangorestframework = "^3.12.2"
coverage = "^5.3.1"
pillow = "^8.1.0"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
